k8s/db-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: db-statefulset
  namespace: myapp-namespace
spec:
  selector:
    app: db-statefulset
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
  clusterIP: None

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db-statefulset
  namespace: myapp-namespace
spec:
  serviceName: db-statefulset
  replicas: 1
  selector:
    matchLabels:
      app: db-statefulset
  template:
    metadata:
      labels:
        app: db-statefulset
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
